force-app/main/default/objects/nBRIDGER__OFAC_History__c/nBRIDGER__OFAC_History__c.object-meta.xml
<CustomObject>
    <label>OFAC_History</label>
    <nameField>
        <label>OFAC_History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OFAC_History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>