force-app/main/default/objects/nBRIDGER__OFAC_History__c/fields/nBRIDGER__Loan__c.field-meta.xml
<CustomField>
    <fullName>nBRIDGER__Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan</label>
    <referenceTo>LLC_BI__Loan__c</referenceTo>
    <relationshipLabel>OFAC_History</relationshipLabel>
    <relationshipName>OFAC_History</relationshipName>
    <type>Lookup</type>
</CustomField>