force-app/main/default/objects/nBRIDGER__OFAC_History__c/fields/nBRIDGER__Primary_Relationship__c.field-meta.xml
<CustomField>
    <fullName>nBRIDGER__Primary_Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Relationship</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>OFAC_History</relationshipLabel>
    <relationshipName>OFAC_History</relationshipName>
    <type>Lookup</type>
</CustomField>