force-app/main/default/objects/nBRIDGER__OFAC_History__c/fields/nBRIDGER__Product_Package__c.field-meta.xml
<CustomField>
    <fullName>nBRIDGER__Product_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Package</label>
    <referenceTo>LLC_BI__Product_Package__c</referenceTo>
    <relationshipLabel>OFAC_History</relationshipLabel>
    <relationshipName>OFAC_History</relationshipName>
    <type>Lookup</type>
</CustomField>