force-app/main/default/objects/nBRIDGER__OFAC_History__c/fields/nBRIDGER__Reason2__c.field-meta.xml
<CustomField>
    <fullName>nBRIDGER__Reason2__c</fullName>
    <description>Contains the reasons that this relationship was included in this OFAC search.</description>
    <label>Reason</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>