force-app/main/default/objects/nBRIDGER__OFAC_History__c/fields/nBRIDGER__Reason__c.field-meta.xml
<CustomField>
    <fullName>nBRIDGER__Reason__c</fullName>
    <description>--DEPRECATED-- Contains the reasons that this relationship was included in this OFAC search.</description>
    <label>-D Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>